--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ body {
     font-size: 14px;
     color: #2d3748;
     background: white;
+    font-weight: bold
 }
 
 .card-item:hover {
@@ -590,4 +591,5 @@ body {
 .cards-display::-webkit-scrollbar-thumb {
     background: #cbd5e0;
     border-radius: 3px;
+
 }
